--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,10 @@ services:
   mysql:
     image: 'mysql:latest'
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      - 'MYSQL_DATABASE=bookshelfDb'
+      - 'MYSQL_PASSWORD=bookshelf'
+      - 'MYSQL_ROOT_PASSWORD=bookshelf'
+      - 'MYSQL_USER=bookshelf'
     ports:
-      - '3306'
+      - '3307:3306'
+    restart: unless-stopped
