first db entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=bookshelf
 
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.config.import=file:./src/main/resources/secured.properties
