--- a/src/main/resources/db/changelog/tables/000.db.changelog.yaml
+++ b/src/main/resources/db/changelog/tables/000.db.changelog.yaml
@@ -1,2 +1,7 @@
 databaseChangeLog:
-  - 
+  - include:
+      file: authors_table.yaml
+      relativeToChangelogFile: true
+  - include:
+      file: books_table.yaml
+      relativeToChangelogFile: true
