--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=bookshelf
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 
 spring.config.import=file:./src/main/resources/secured.properties
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
